<resources>
    <string name="app_name">CEE</string>
    <string name="study">지식</string>
    <string name="quiz">퀴즈</string>
    <string name="invest">투자</string>
    <string name="setting">설정</string>

    <string name="quiz_number">퀴즈1</string>
    <string name="quiz_question">빌리거나 빌려 준 돈에 대한 이자. 이율을 금리라고 한다</string>

    <string name="quiz_dialog_correct">정답</string>
    <string name="quiz_dialog_correct_text">정답입니다</string>
    <string name="quiz_dialog_wrong">오답</string>
    <string name="quiz_dialog_wrong_text">오답입니다</string>

    <string name="quiz_correct">맞다</string>
    <string name="quiz_wrong">틀리다</string>

    <string name="finish_quiz">퀴즈 종료</string>

    <string name="study_title">학습</string>
    <string name="study_msg">마지막으로 학습하신 지식은</string>
    <string name="study_continue">이어하기</string>
    <string name="see_term_list">개념 리스트 보기</string>

    <string name="invest_title">투자</string>
    <string name="invest_company1">자동차기업</string>
    <string name="invest_company2">문구기업</string>
    <string name="invest_company3">제약기업</string>
    <string name="invest_savings">적금</string>

    <string name="invest_day_of_result">1일차 기업</string>
    <string name="invest_day_of_myresult">나의자산</string>
    <string name="invest_day_of_final_result">최종결과</string>
    <string name="invest_day_of_final_myresult">투자요약</string>
    <string name="invest_company1_result">제약기업\n25->30</string>
    <string name="invest_company2_result">문구기업\n25->30</string>
    <string name="invest_company3_result">제약기업\n25->30</string>

    <string name="quiz_type">퀴즈유형</string>
    <string name="economy_basic">경제기초</string>
    <string name="financial_base">금융기반</string>
    <string name="stock_advanced">주식심화</string>
    <string name="customized_quiz">맞춤형퀴즈</string>
    <string name="one_more_step">한걸음 더!</string>
    <string name="start_quiz">퀴즈\n시작</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="selected_company">자동차기업</string>

    <string name="deadline_btn">마감</string>
    <string name="complete_btn">완료</string>

    <string name="tutorial">튜토리얼을 진행하겠습니다.
진행을 원치 않으시면 두 손가락으로 스크롤 하시면 됩니다.
위 앱의 음성서비스는 한번 누르면 일시정지,
꾹 누르기를 하면 음성서비스 뒤로가기를 할 수 있습니다.</string>

    <string name="content_description_quiz_range">퀴즈 유형을 선택하실 수 있습니다.</string>

</resources>