<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/study_fragment"
        android:icon="@drawable/ic_bt_book"
        android:title="@string/study"
        app:showAsAction="withText"/>

    <item
        android:id="@+id/quiz_fragment"
        android:icon="@drawable/ic_bt_quiz"
        android:title="@string/quiz"
        app:showAsAction="withText"/>

    <item
        android:id="@+id/invest_fragment"
        android:icon="@drawable/ic_bt_save_money"
        android:title="@string/invest"
        app:showAsAction="withText"/>

    <item
        android:id="@+id/setting_fragment"
        android:icon="@drawable/ic_bt_settings"
        android:title="@string/setting"
        app:showAsAction="withText"/>

</menu>