<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.InvestResultActivity">

    <TextView
        android:layout_width="0dp"
        android:layout_height="56dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/invest_title"
        android:textColor="@color/white"
        android:textSize="25dp"
        android:fontFamily="@font/sf_bold"
        android:gravity="center"
        android:background="@color/gray"
        android:id="@+id/invest_title_tv"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/invest_title_tv">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/activity_invest_result_show_result_cl"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:background="@drawable/button_rectangle"
            app:layout_constraintBottom_toTopOf="@id/activity_invest_result_show_left_coin_cl"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/activity_invest_result_round_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:background="@drawable/ic_rectangle_gray"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/activity_invest_result_day_of_result_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/sf_bold"
                    android:text="@string/invest_day_of_result"
                    android:textColor="@color/white"
                    android:textSize="15dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                </TextView>


            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/activity_invest_result_company1_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/invest_company1_result"
                android:layout_marginTop="20dp"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/activity_invest_result_round_tv"

                >

            </TextView>

            <TextView
                android:id="@+id/activity_invest_result_company2_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/invest_company2_result"
                android:layout_marginTop="20dp"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/activity_invest_result_company1_tv"

                >

            </TextView>

            <TextView
                android:id="@+id/activity_invest_result_company3_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/invest_company3_result"
                android:layout_marginTop="20dp"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/activity_invest_result_company2_tv"

                >

            </TextView>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/activity_invest_result_show_left_coin_cl"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/button_rectangle"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"


            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/activity_invest_result_show_result_cl">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/activity_invest_result_my_coin_round_cl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:background="@drawable/ic_rectangle_gray"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/activity_invest_result_my_coin_title_round_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/sf_bold"

                    android:text="나의 자본"
                    android:textColor="@color/white"
                    android:textSize="20dp"

                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                </TextView>


<!--                <TextView-->
<!--                    android:id="@+id/activity_invest_result_my_coin_content_round_tv"-->
<!--                    android:layout_width="wrap_content"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:fontFamily="@font/sf_bold"-->
<!--                    android:text="100"-->
<!--                    android:textColor="@color/white"-->
<!--                    android:textSize="20dp"-->
<!--                    app:layout_constraintStart_toStartOf="parent"-->
<!--                    app:layout_constraintEnd_toEndOf="parent"-->
<!--                    app:layout_constraintTop_toBottomOf="@id/activity_invest_result_my_coin_title_round_tv">-->

<!--                </TextView>-->


            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/activity_invest_result_my_coin_content_round_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/sf_bold"
                android:text="100"
                android:textColor="@color/white"
                android:textSize="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"

                android:layout_marginTop="30dp"
                app:layout_constraintTop_toBottomOf="@id/activity_invest_result_my_coin_round_cl">

            </TextView>


        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>